--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 spring:
   application:
-    name: config-server  cloud:    config:      server:        git:          uri: https://github.com/dengjinhmm/springCloudConfig/
+    name: config-server  cloud:    config:      server:        git:          uri: https://github.com/dengjinhmm/springCloudConfig
           search-paths:          - respo
       label: master            
 server:  port: 8888
   
-  
-  
+  #defaultZone: http://localhost:8761/eureka/
+
+eureka:  client:    service-url:      defaultZone: http://localhost:8889/eureka/
+
+                
